# stickersolve-gui

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  debian.txt  makefile  mint-vera.txt  stickersolve-gui  vendor.txt
src/: AspectRatioWidget.hpp  ConfigParser.h  NxNeditor.hpp  SelectColorButton.hpp  SelectColorPanel.hpp  VisualCubicPuzzles.hpp  main.cpp
